--- a/documents/html/index.html
+++ b/documents/html/index.html
@@ -88,48 +88,65 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
 <div class="title">MaterialXMaterials Documentation</div>  </div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p><a class="anchor" id="md_D__Work_materialx_materialxMaterials_README"></a> </p><h2><img src="https://kwokcb.github.io/materialxMaterials/documents/icons/logo_large_blue_teapot_no_text.png" alt="" width="24px" class="inline"/>MaterialX Materials</h2>
+<div class="textblock"><p><a class="anchor" id="md_D__Work_materialx_materialxMaterials_README"></a> </p><h2 class="bg-gradient rounded-2 p-2"><img src="https://kwokcb.github.io/materialxMaterials/documents/icons/logo_large_blue_teapot_no_text.png" alt="" width="32px" class="inline"/>MaterialX Materials</h2>
 <h3><a class="anchor" id="autotoc_md0"></a>
 Introduction</h3>
 <p>Welcome to MaterialX Materials.</p>
 <p>This site hosts a set of libraries and command line utilities to query remote databases for MaterialX materials.</p>
-<p>The current utilities will work with the:</p>
-<div style="display: flex; align-items: center;"> <img src="https://physicallybased.info/images/renders/cycles/600/aluminum.webp" alt="" width="64px" style="margin-right: 10px;" class="inline"/> <a href="https://physicallybased.info/">PhysicallyBased database</a> Material descriptions can be downloaded with additional utilities to create materials using either: Autodesk Standard Surface, OpenPBR, or glTF PBR shading model shaders. </div><p> <br  />
- </p><div style="display: flex; align-items: center;"> <img src="https://image.matlib.gpuopen.com/afff0c66-dba8-4d79-b96b-459fbd9cbef5.jpeg" alt="" width="64px" style="margin-right: 10px;" class="inline"/> <a href="https://matlib.gpuopen.com/main/materials/all">AMD GPUOpen database</a> MaterialX packages can be downloaded (as zip files). Images and MaterialX documents can be extracted for any of the posted materials in the database. </div><p>Each currently has Python implementations.</p>
-<p>A Javascript implementation for extracting <code>PhysicallyBased</code> materials is <a href="https://kwokcb.github.io/MaterialXLab/javascript/PhysicallyBasedMaterialX_out.html" target="_blank">available here. <img src="https://kwokcb.github.io/materialxMaterials/documents/images/PhysicallBased_Carrot.png" alt="" width="100%" class="inline"/> </a>.</p>
-<h3><a class="anchor" id="autotoc_md1"></a>
-Examples</h3>
-<h4><a class="anchor" id="autotoc_md2"></a>
-Command Line Utilities</h4>
-<ol type="1">
+<blockquote class="doxtable">
+<p>Visit the <b><a href="https://kwokcb.github.io/materialxMaterials" target="_blank">Home Page</a> </b></p>
+</blockquote>
+<p><b></b></p>
+<p><b>The current utilities support:</b></p>
+<p><b></p><div style="display: flex; align-items: center;"> <img src="https://physicallybased.info/images/renders/cycles/600/aluminum.webp" alt="" width="64px" style="margin-right: 10px;" class="inline"/> <a href="https://physicallybased.info/">PhysicallyBased database</a> Material descriptions can be downloaded with additional utilities to create materials using either: Autodesk Standard Surface, OpenPBR, or glTF PBR shading model shaders. </div><p> <br  />
+ </p><div style="display: flex; align-items: center;"> <img src="https://image.matlib.gpuopen.com/afff0c66-dba8-4d79-b96b-459fbd9cbef5.jpeg" alt="" width="64px" style="margin-right: 10px;" class="inline"/> <a href="https://matlib.gpuopen.com/main/materials/all">AMD GPUOpen database</a> MaterialX packages can be downloaded (as zip files). Images and MaterialX documents can be extracted for any of the posted materials in the database. </div><p></b></p>
+<p><b>Each currently has Python implementations.</b></p>
+<p><b>A Javascript implementation for extracting <code>PhysicallyBased</code> materials is <a href="https://kwokcb.github.io/MaterialXLab/javascript/PhysicallyBasedMaterialX_out.html" target="_blank">available here. <img src="https://kwokcb.github.io/materialxMaterials/documents/images/PhysicallBased_Carrot.png" alt="" width="100%" class="inline"/> </a></b></p>
+<p><b></b></p>
+<p><b></b></p>
+<p><b></p><hr  />
+ <h3>Examples</h3>
+<p></b></p>
+<p><b></b></p>
+<p><b></p><h4>Command Line Utilities</h4>
+<p></b></p>
+<p><b></b></p>
+<p><b></p><ol type="1">
 <li>Query all materials fom PhysicallyBased and convert them to all support shading models. Save the material list and corresponding MaterialX files in the default output location. <div class="fragment"><div class="line">python physicallyBasedMaterialX.py</div>
 </div><!-- fragment --></li>
 <li>Query all materials fom GPUOpen. Extract out a few material packages (zip). Save the material lists and unzipped packages (MaterialX and images) in the default output location. <div class="fragment"><div class="line">python GPUOpenLoaderCmd.py.py</div>
 </div><!-- fragment --></li>
 </ol>
-<h3><a class="anchor" id="autotoc_md3"></a>
-API Examples</h3>
-<ul>
+<p></b></p>
+<p><b></p><h3>API Examples</h3>
+<p></b></p>
+<p><b></p><ul>
 <li>Forth-coming...</li>
 </ul>
-<h3><a class="anchor" id="autotoc_md4"></a>
-Dependencies</h3>
-<p>The Python utilities require:</p>
-<ol type="1">
+<p></b></p>
+<p><b></p><h3>Dependencies</h3>
+<p></b></p>
+<p><b></b></p>
+<p><b>The Python utilities require:</b></p>
+<p><b></p><ol type="1">
 <li>The MaterialX 1.39 or greater package for PhysicallyBased OpenPBR shader creation</li>
 <li>The <code>requests</code> package.</li>
 </ol>
-<h3><a class="anchor" id="autotoc_md5"></a>
+<p></b></p>
+<p><b></b></p>
+<h3><a class="anchor" id="autotoc_md1"></a>
 Building</h3>
-<p>The repository can be cloned and the package built using:</p>
-<div class="fragment"><div class="line">pip install .</div>
-</div><!-- fragment --><p> This will pull down the dependent packages as needed.</p>
-<h3><a class="anchor" id="autotoc_md6"></a>
-API Reference</h3>
-<p>The API reference can be found <a href="https://kwokcb.github.io/materialxMaterials/documents/html/index.html">here</a></p>
-<h3><a class="anchor" id="autotoc_md7"></a>
-Usage</h3>
-<p>Documentation forth-coming... </p>
+<p><b> The <a href="https://github.com/kwokcb/materialxMaterials"><img src="https://github.com/kwokcb/materialxMaterials/documents/icons/github-mark-white.svg" alt="" style="pointer-events: none;" width="16px" class="inline"/> GitHub repository</a> can be cloned and the package built using:</b></p>
+<p><b></p><div class="fragment"><div class="line">pip install .</div>
+</div><!-- fragment --><p> This will pull down the dependent packages as needed.</b></p>
+<p><b></p><h3>API Reference</h3>
+<p></b></p>
+<p><b></b></p>
+<p><b>The API reference can be found <a href="https://kwokcb.github.io/materialxMaterials/documents/html/index.html">here</a></b></p>
+<p><b></p><h3>Usage</h3>
+<p></b></p>
+<p><b></b></p>
+<p><b>Forth-coming... </b></p>
 </div></div><!-- PageDoc -->
 </div><!-- contents -->
 </div><!-- doc-content -->
