Fix github icon.

--- a/documents/html/index.html
+++ b/documents/html/index.html
@@ -136,7 +136,7 @@ Introduction</h3>
 <p><b></b></p>
 <h3><a class="anchor" id="autotoc_md1"></a>
 Building</h3>
-<p><b> The <a href="https://github.com/kwokcb/materialxMaterials"><img src="https://github.com/kwokcb/materialxMaterials/documents/icons/github-mark-white.svg" alt="" style="pointer-events: none;" width="16px" class="inline"/> GitHub repository</a> can be cloned and the package built using:</b></p>
+<p><b> The <a href="https://github.com/kwokcb/materialxMaterials"><img src="https://raw.githubusercontent.com/kwokcb/materialxMaterials/20cbe6bde0844699824a9a7a05afe882c42b071d/documents/icons/github-mark-white.svg?token=ALYVGHLEDNQAPHZHPUNJNP3GXTAUQ" alt="" style="pointer-events: none;" width="16px" class="inline"/> GitHub repository</a> can be cloned and the package built using:</b></p>
 <p><b></p><div class="fragment"><div class="line">pip install .</div>
 </div><!-- fragment --><p> This will pull down the dependent packages as needed.</b></p>
 <p><b></p><h3>API Reference</h3>
