--- a/documents/html/namespace_g_p_u_open_loader.html
+++ b/documents/html/namespace_g_p_u_open_loader.html
@@ -91,7 +91,7 @@ $(document).ready(function(){initNavTree('namespace_g_p_u_open_loader.html','');
 </div><!--header-->
 <div class="contents">
 
-<p>Utilities load materials from the GPUOpen material database.  
+<p>Utilities to extract materials from the GPUOpen material database.  
 <a href="namespace_g_p_u_open_loader.html#details">More...</a></p>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="nested-classes"></a>
@@ -101,8 +101,9 @@ Classes</h2></td></tr>
 <tr class="separator:"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
-<div class="textblock"><p>Utilities load materials from the GPUOpen material database. </p>
-<p>See: <a href="https://api.matlib.gpuopen.com/api/swagger/">https://api.matlib.gpuopen.com/api/swagger/</a> for API information. </p>
+<div class="textblock"><p>Utilities to extract materials from the GPUOpen material database. </p>
+<p>This is not a complete set of calls to extract out all material information but instead enough to find materials and extract out specific packages from the list of available materials.</p>
+<p>See: <a href="https://api.matlib.gpuopen.com/api/swagger/">https://api.matlib.gpuopen.com/api/swagger/</a> for information on available API calls. </p>
 </div></div><!-- contents -->
 </div><!-- doc-content -->
 <!-- start footer part -->
