--- a/documents/html/index.html
+++ b/documents/html/index.html
@@ -88,66 +88,39 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
 <div class="title">MaterialXMaterials Documentation</div>  </div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p><a class="anchor" id="md_D__Work_materialx_materialxMaterials_README"></a> </p><h2 class="bg-gradient rounded-2 p-2"><img src="https://kwokcb.github.io/materialxMaterials/documents/icons/logo_large_blue_teapot_no_text.png" alt="" width="32px" class="inline"/>MaterialX Materials</h2>
-<h3><a class="anchor" id="autotoc_md0"></a>
-Introduction</h3>
-<p>Welcome to MaterialX Materials.</p>
-<p>This site hosts a set of libraries and command line utilities to query remote databases for MaterialX materials.</p>
-<blockquote class="doxtable">
-<p>Visit the <b><a href="https://kwokcb.github.io/materialxMaterials" target="_blank">Home Page</a> </b></p>
+<div class="textblock"><p><a class="anchor" id="md_D__Work_materialx_materialxMaterials_README"></a></p>
+<h2 class="bg-gradient rounded-2 p-0"><img src="https://kwokcb.github.io/materialxMaterials/documents/icons/logo_large_blue_teapot_no_text.png" alt="" width="32px" class="inline"/>MaterialX Materials</h2>
+<div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h3>Introduction</h3>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">Welcome to MaterialX Materials.</div><div class="container p-2 rounded-4 border border-secondary border-rounded">This site hosts a set of libraries and command line utilities to query remote databases for MaterialX materials.</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><blockquote class="doxtable">
+<p>Visit the <b><a href="https://kwokcb.github.io/materialxMaterials" target="_blank">Home Page</a></b> </p>
 </blockquote>
-<p><b></b></p>
-<p><b>The current utilities support:</b></p>
-<p><b></p><div style="display: flex; align-items: center;"> <img src="https://physicallybased.info/images/renders/cycles/600/aluminum.webp" alt="" width="64px" style="margin-right: 10px;" class="inline"/> <a href="https://physicallybased.info/">PhysicallyBased database</a> Material descriptions can be downloaded with additional utilities to create materials using either: Autodesk Standard Surface, OpenPBR, or glTF PBR shading model shaders. </div><p> <br  />
- </p><div style="display: flex; align-items: center;"> <img src="https://image.matlib.gpuopen.com/afff0c66-dba8-4d79-b96b-459fbd9cbef5.jpeg" alt="" width="64px" style="margin-right: 10px;" class="inline"/> <a href="https://matlib.gpuopen.com/main/materials/all">AMD GPUOpen database</a> MaterialX packages can be downloaded (as zip files). Images and MaterialX documents can be extracted for any of the posted materials in the database. </div><p></b></p>
-<p><b>Each currently has Python implementations.</b></p>
-<p><b>A Javascript implementation for extracting <code>PhysicallyBased</code> materials is <a href="https://kwokcb.github.io/MaterialXLab/javascript/PhysicallyBasedMaterialX_out.html" target="_blank">available here. <img src="https://kwokcb.github.io/materialxMaterials/documents/images/PhysicallBased_Carrot.png" alt="" width="100%" class="inline"/> </a></b></p>
-<p><b></b></p>
-<p><b></b></p>
-<p><b></p><hr  />
- <h3>Examples</h3>
-<p></b></p>
-<p><b></b></p>
-<p><b></p><h4>Command Line Utilities</h4>
-<p></b></p>
-<p><b></b></p>
-<p><b></p><ol type="1">
-<li>Query all materials fom PhysicallyBased and convert them to all support shading models. Save the material list and corresponding MaterialX files in the default output location. <div class="fragment"><div class="line">python physicallyBasedMaterialX.py</div>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">The current utilities support:</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><div style="display: flex; align-items: center;"> <img src="https://physicallybased.info/images/renders/cycles/600/aluminum.webp" alt="" width="64px" style="margin-right: 10px;" class="inline"/> <a href="https://physicallybased.info/">PhysicallyBased database</a> Material descriptions can be downloaded with additional utilities to create materials using either: Autodesk Standard Surface, OpenPBR, or glTF PBR shading model shaders. </div><p> <br  />
+ </p><div style="display: flex; align-items: center;"> <img src="https://image.matlib.gpuopen.com/afff0c66-dba8-4d79-b96b-459fbd9cbef5.jpeg" alt="" width="64px" style="margin-right: 10px;" class="inline"/> <a href="https://matlib.gpuopen.com/main/materials/all">AMD GPUOpen database</a> MaterialX packages can be downloaded (as zip files). Images and MaterialX documents can be extracted for any of the posted materials in the database. </div></div><div class="container p-2 rounded-4 border border-secondary border-rounded">Each currently has Python implementations.</div><div class="container p-2 rounded-4 border border-secondary border-rounded">A Javascript implementation for extracting <code>PhysicallyBased</code> materials is <a href="https://kwokcb.github.io/MaterialXLab/javascript/PhysicallyBasedMaterialX_out.html" target="_blank">available here. <img src="https://kwokcb.github.io/materialxMaterials/documents/images/PhysicallBased_Carrot.png" alt="" width="100%" class="inline"/> </a></div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h3>Usage</h3>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h4>Commands</h4>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded"><ol type="1">
+<li>Query all materials fom PhysicallyBased and convert them to all support shading models. Save the material list and corresponding MaterialX files in the default output location. The build will include this information Python package under the <code>data</code> folder. <div class="fragment"><div class="line">python physicallyBasedMaterialX.py</div>
 </div><!-- fragment --></li>
-<li>Query all materials fom GPUOpen. Extract out a few material packages (zip). Save the material lists and unzipped packages (MaterialX and images) in the default output location. <div class="fragment"><div class="line">python GPUOpenLoaderCmd.py.py</div>
+<li>Query all materials fom GPUOpen. Extract out a few material packages (zip). Save the material lists, material names and unzipped packages (MaterialX and images) in the default output location. The build will include this information Python package under the <code>data</code> folder. <div class="fragment"><div class="line">python .GPUOpenLoaderCmd.py --materialNames=1 --saveMaterials=1 </div>
 </div><!-- fragment --></li>
 </ol>
-<p></b></p>
-<p><b></p><h3>API Examples</h3>
-<p></b></p>
-<p><b></p><ul>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h3>Library</h3>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded"><ul>
 <li>Forth-coming...</li>
 </ul>
-<p></b></p>
-<p><b></p><h3>Dependencies</h3>
-<p></b></p>
-<p><b></b></p>
-<p><b>The Python utilities require:</b></p>
-<p><b></p><ol type="1">
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h3>Results</h3>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">The following are some samples which have been rendered using the <code>MaterialXView</code> utility which is part of the MaterialX binary distribution.</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><table class="container-flex">
+</table>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"> </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> Emerald Peaks Wallpaper </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> Indigo Palm Wallpaper </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> Oliana Blue Painted Wood  </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> <img src="https://kwokcb.github.io/materialxMaterials/src/materialxMaterials/data/GPUOpenMaterialX/Emerald Peaks Wallpaper/Emerald_Peaks_Wallpaper.png" alt="" width="100%" class="inline"/>  </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> <img src="https://kwokcb.github.io/materialxMaterials/src/materialxMaterials/data/GPUOpenMaterialX/Indigo Palm Wallpaper/Indigo_Palm_Wallpaper.png" alt="" width="100%" class="inline"/>  </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> <img src="https://kwokcb.github.io/materialxMaterials/src/materialxMaterials/data/GPUOpenMaterialX/Oliana Blue Painted Wood/Oliana_Blue_Painted_Wood.png" alt="" width="100%" class="inline"/>   </div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded"><table class="doxtable">
+</table>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"> </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> Ketchup </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> Cooking Oil </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> Brass  </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> <img src="https://kwokcb.github.io/materialxMaterials/src/materialxMaterials/data/PhysicallyBasedMaterialX/Ketchup.png" alt="" width="100%" class="inline"/>  </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> <img src="https://kwokcb.github.io/materialxMaterials/src/materialxMaterials/data/PhysicallyBasedMaterialX/Cooking_Oil.png" alt="" width="100%" class="inline"/>  </div><div class="container p-2 rounded-4 border border-secondary border-rounded"> <img src="https://kwokcb.github.io/materialxMaterials/src/materialxMaterials/data/PhysicallyBasedMaterialX/Brass.png" alt="" width="100%" class="inline"/>  </div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h3>Dependencies</h3>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">The Python utilities require:</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><ol type="1">
 <li>The MaterialX 1.39 or greater package for PhysicallyBased OpenPBR shader creation</li>
 <li>The <code>requests</code> package.</li>
 </ol>
-<p></b></p>
-<p><b></b></p>
-<h3><a class="anchor" id="autotoc_md1"></a>
-Building</h3>
-<p><b> The <a href="https://github.com/kwokcb/materialxMaterials"><img src="https://raw.githubusercontent.com/kwokcb/materialxMaterials/20cbe6bde0844699824a9a7a05afe882c42b071d/documents/icons/github-mark-white.svg?token=ALYVGHLEDNQAPHZHPUNJNP3GXTAUQ" alt="" style="pointer-events: none;" width="16px" class="inline"/> GitHub repository</a> can be cloned and the package built using:</b></p>
-<p><b></p><div class="fragment"><div class="line">pip install .</div>
-</div><!-- fragment --><p> This will pull down the dependent packages as needed.</b></p>
-<p><b></p><h3>API Reference</h3>
-<p></b></p>
-<p><b></b></p>
-<p><b>The API reference can be found <a href="https://kwokcb.github.io/materialxMaterials/documents/html/index.html">here</a></b></p>
-<p><b></p><h3>Usage</h3>
-<p></b></p>
-<p><b></b></p>
-<p><b>Forth-coming... </b></p>
-</div></div><!-- PageDoc -->
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h3>Building</h3>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">The <a href="https://github.com/kwokcb/materialxMaterials"><img src="https://raw.githubusercontent.com/kwokcb/materialxMaterials/20cbe6bde0844699824a9a7a05afe882c42b071d/documents/icons/github-mark-white.svg?token=ALYVGHLEDNQAPHZHPUNJNP3GXTAUQ" alt="" style="pointer-events: none;" width="16px" class="inline"/> GitHub repository</a> can be cloned and the package built using:</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><div class="fragment"><div class="line">pip install .</div>
+</div><!-- fragment --></div><div class="container p-2 rounded-4 border border-secondary border-rounded">This will pull down the dependent packages as needed.</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h3>API Reference</h3>
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">The API reference can be found <a href="https://kwokcb.github.io/materialxMaterials/documents/html/index.html">here</a></div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div> </div></div><!-- PageDoc -->
 </div><!-- contents -->
 </div><!-- doc-content -->
 <!-- start footer part -->
