--- a/documents/html/index.html
+++ b/documents/html/index.html
@@ -119,7 +119,7 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
 <li>Forth-coming...</li>
 </ul>
 </div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h3>Results</h3>
-</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">The following are some samples which have been rendered using the <code>MaterialXView</code> utility which is part of the MaterialX binary distribution.</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><table class="doxtable">
+</div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">The following are some samples which have been rendered using the <code>MaterialXView</code> utility which is part of the MaterialX binary distribution.</div><div class="container p-2 rounded-4 border border-secondary border-rounded">Details about some examples can be found in the <a href="./examples/">Examples pages</a></div><div class="container p-2 rounded-4 border border-secondary border-rounded"><table class="doxtable">
 <tr>
 <th>Emerald Peaks Wallpaper </th><th>Indigo Palm Wallpaper </th><th>Oliana Blue Painted Wood </th></tr>
 <tr>
