--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ packages (zip). Save the material lists, material names and unzipped packages (M
 </ul>
 <h3>Results</h3>
 <p>The following are some samples which have been rendered using the <code>MaterialXView</code> utility which is part of the MaterialX binary distribution.</p>
+<p>Details about some examples can be found in the <a href="./examples/">Examples pages</a></p>
 <table>
 <tr >
 <th >
