Add pillow dependence.

--- a/README.html
+++ b/README.html
@@ -407,6 +407,7 @@ An <a href="https://kwokcb.github.io/MaterialXLab/javascript/PhysicallyBasedMate
 <ol>
 <li>The MaterialX 1.39 or greater package for PhysicallyBased OpenPBR shader creation</li>
 <li>The <code>requests</code> package.</li>
+<li>The <code>pillow</code> package for image handling for GPUOpen package handling</li>
 </ol>
 <h3>Building</h3>
 <p>The <a href="https://github.com/kwokcb/materialxMaterials"><img src="https://raw.githubusercontent.com/kwokcb/materialxMaterials/20cbe6bde0844699824a9a7a05afe882c42b071d/documents/icons/github-mark-white.svg?token=ALYVGHLEDNQAPHZHPUNJNP3GXTAUQ" width=16px> GitHub repository</a> can be cloned and the package built using:</p>
