Add transmission color remap (#3)
* Add transmission color remap

If metallness == roughness == 0 and transmission and color then set transmission color = color.

* Update docs.

* Add pillow dependence.

* Patch js.

* Cleanup.

--- a/documents/html/index.html
+++ b/documents/html/index.html
@@ -99,6 +99,7 @@ $(document).ready(function(){initNavTree('index.html',''); initResizable(); });
 </div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">The Python utilities require:</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><ol type="1">
 <li>The MaterialX 1.39 or greater package for PhysicallyBased OpenPBR shader creation</li>
 <li>The <code>requests</code> package.</li>
+<li>The <code>pillow</code> package for image handling for GPUOpen package handling</li>
 </ol>
 </div><div class="container p-2 rounded-4 border border-secondary border-rounded"><h3>Building</h3>
 </div><div class="container p-2 rounded-4 border border-secondary border-rounded"></div><div class="container p-2 rounded-4 border border-secondary border-rounded">The <a href="https://github.com/kwokcb/materialxMaterials"><img src="https://raw.githubusercontent.com/kwokcb/materialxMaterials/20cbe6bde0844699824a9a7a05afe882c42b071d/documents/icons/github-mark-white.svg?token=ALYVGHLEDNQAPHZHPUNJNP3GXTAUQ" alt="" style="pointer-events: none;" width="16px" class="inline"/> GitHub repository</a> can be cloned and the package built using:</div><div class="container p-2 rounded-4 border border-secondary border-rounded"><div class="fragment"><div class="line">pip install .</div>
