--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ packages (zip). Save the material lists, material names and unzipped packages (M
 <h3>Library</h3>
 <p>A <code>Jupyter</code> notebook demonstrates the direct usage of the Python library. The output of the notebook can be found <a href="https://kwokcb.github.io/materialxMaterials/examples/materialxMaterials_tutorial_out_iframe.html">here</a>. The notebook can found in the Github repository under the <code>examples</code> folder.</p>
 <h3>Results</h3>
-<p>The following are some samples which have been rendered using the <code>MaterialXView</code> utility which is part of the MaterialX binary distribution.</p>
+<p>The following are some samples which have been rendered using the <code>MaterialXViewer</code> utility which is part of the MaterialX binary distribution.</p>
 <p>Details about some examples can be found in the <a href="https://kwokcb.github.io/materialxMaterials/examples/index.html">Examples pages</a></p>
 <table>
 <tr >
