Fix up class name and add docs for sGPUOpenMaterialLoader.

--- a/documents/html/doxygen_crawl.html
+++ b/documents/html/doxygen_crawl.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
+<a href="_js_g_p_u_open_loader_8js_source.html"/>
 <a href="_js_material_x_physically_based_8js_source.html"/>
 <a href="____init_____8py_source.html"/>
 <a href="____main_____8py_source.html"/>
@@ -16,6 +17,8 @@
 <a href="physically_based_material_x_8py_source.html"/>
 <a href="physically_based_material_x_cmd_8py_source.html"/>
 <a href="physically_based_material_x_cmd_8py.html"/>
+<a href="class_js_g_p_u_open_material_loader.html"/>
+<a href="class_js_g_p_u_open_material_loader-members.html"/>
 <a href="class_js_physically_based_material_loader.html"/>
 <a href="class_js_physically_based_material_loader-members.html"/>
 <a href="namespacematerialx_materials_1_1_g_p_u_open_loader.html"/>
@@ -74,8 +77,17 @@
 <a href="____main_____8py_source.html"/>
 <a href="_g_p_u_open_loader_8py_source.html"/>
 <a href="_g_p_u_open_loader_cmd_8py_source.html"/>
+<a href="_js_g_p_u_open_loader_8js_source.html"/>
 <a href="_js_material_x_physically_based_8js_source.html"/>
 <a href="annotated.html"/>
+<a href="class_js_g_p_u_open_material_loader.html"/>
+<a href="class_js_g_p_u_open_material_loader.html#a0ab9a9768584167afa02afa0b9755632"/>
+<a href="class_js_g_p_u_open_material_loader.html#a17393d54017666b1a1d10b9e8a229477"/>
+<a href="class_js_g_p_u_open_material_loader.html#a29660fba61e18ad05c4ceb9aef8544b2"/>
+<a href="class_js_g_p_u_open_material_loader.html#a4b3ee53434e8ea43ed0a5b7d0e215778"/>
+<a href="class_js_g_p_u_open_material_loader.html#a9cff1950acf5cb3057088b562ad3353c"/>
+<a href="class_js_g_p_u_open_material_loader.html#ac14a2316019215170e6a5b41796083a0"/>
+<a href="class_js_g_p_u_open_material_loader.html#ac922c9c0fdd87552b5b43cf68455734c"/>
 <a href="class_js_physically_based_material_loader.html"/>
 <a href="class_js_physically_based_material_loader.html#a0ff670b529d0d01fe96d6e7d656c8f2a"/>
 <a href="class_js_physically_based_material_loader.html#a19ba3f660663b91ec2be3fe81b45b2b4"/>
